# patchi-wani

./: .gitignore  COMMIT_CONVENTION.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  build_all.sh  doctor.sh  patchi-wani.code-workspace  setup.sh
.github/workflows/: deploy.yml
patchi_wani_engine/: Cargo.toml
patchi_wani_engine/.cargo/: config.toml
patchi_wani_engine/src/: lib.rs
patchi_wani_flutter/: pubspec.yaml
patchi_wani_flutter/assets/: game_rule_default.json
patchi_wani_flutter/lib/: main.dart
patchi_wani_flutter/lib/data/: play_log_db.dart
patchi_wani_flutter/lib/game/: engine.dart  engine_ffi.dart  engine_stub.dart  game_controller.dart  web_beep.dart  web_beep_interop.dart  web_beep_stub.dart
patchi_wani_flutter/lib/scratch/: block_model.dart
patchi_wani_flutter/lib/screens/: block_editor_screen.dart  game_screen.dart  play_log_screen.dart
patchi_wani_flutter/test/: widget_test.dart
patchi_wani_flutter/web/: index.html  manifest.json
