[package]
name    = "patchi_wani_engine"
version = "0.1.0"
edition = "2021"

# Built as a shared library called from Flutter/Dart
[lib]
name      = "patchi_wani_engine"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# JSON serialization for GameRule
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[profile.release]
opt-level = 3
lto       = true
